# JC4880P443C_Demo

./: .gitignore  README.md  sdkconfig.defaults
components/esp_wifi_remote/: .component_hash  CHECKSUMS.json  Kconfig  README.LOCAL.md  idf_component.yml
docs/: bootlog.txt
docs/UI-Design/: dashboard_design_spec.md  dashboard_theme.h
main/: CMakeLists.txt  Kconfig.projbuild  dashboard_ui.c  dashboard_ui.h  idf_component.yml  jc4880p443c_demo.c  mqtt_manager.c  mqtt_manager.h  wifi_manager.c  wifi_manager.h
