idf_component_register(
    SRCS
        "jc4880p443c_demo.c"
        "dashboard_ui.c"
        "wifi_manager.c"
        "mqtt_manager.c"
    INCLUDE_DIRS "."
    REQUIRES
        jc4880p443c
        lvgl
        esp_lcd_st7701
        esp_lcd_touch
        esp_lcd_touch_gt911
        esp_timer
        driver
    PRIV_REQUIRES
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        mqtt
)
